[package]
name = "gitprowebserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
dotenvy = "0.15"
chrono = "=0.4.38"

[patch.crates-io]
time = "=0.3.46"
time-core = "=0.1.7"
time-macros = "=0.2.26"
